--- a/views/mostrarUsuarios.ejs
+++ b/views/mostrarUsuarios.ejs
@@ -26,5 +26,6 @@
             </tbody>
         </table>
     </div>
+    <a href="/agregarUsuario">Agreagar Usuario </a>
     
 <%- include("templates/pie") %>
